Add youtube link

--- a/index.html
+++ b/index.html
@@ -170,6 +170,16 @@
                                         <span>ArtGraph</span>
                                     </a>
                                 </span>
+                                <!-- Youtube Link. -->
+                                <span class="link-block">
+                                    <a href="https://www.youtube.com/watch?v=QZu7e4brcao"
+                                        class="external-link button is-normal is-rounded is-dark">
+                                        <span class="icon">
+                                            <i class="fab fa-youtube"></i>
+                                        </span>
+                                        <span>Video</span>
+                                    </a>
+                                </span>
                                 <!-- Bibtex. -->
                                 <span class="link-block">
                                     <a href="#BibTeX" class="external-link button is-normal is-rounded is-dark">
