--- a/index.html
+++ b/index.html
@@ -376,11 +376,13 @@
     <section class="section" id="BibTeX">
         <div class="container is-max-desktop content">
             <h2 class="title">BibTeX</h2>
-            <pre><code>@inproceedings{fanelli2025idream,
-  title     = {I Dream My Painting: Connecting MLLMs and Diffusion Models via Prompt Generation for Text-Guided Multi-Mask Inpainting},
-  author    = {Nicola, Fanelli and Gennaro, Vessio and Giovanna, Castellano},
-  year      = {2025},
-  booktitle   = {Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision}
+            <pre><code>@inproceedings{fanelli2025dream,
+  title={I Dream My Painting: Connecting MLLMs and Diffusion Models via Prompt Generation for Text-Guided Multi-Mask Inpainting},
+  author={Fanelli, Nicola and Vessio, Gennaro and Castellano, Giovanna},
+  booktitle={2025 IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
+  pages={6073--6082},
+  year={2025},
+  organization={IEEE}
 }</code></pre>
         </div>
     </section>
